[tool.poetry]
name = "markdown-latex-prerender"
version = "0.1.0"
description = "An extension to python-markdown that replaces inline latex with prerendered SVGs"
authors = ["Anton Lydike <me@antonlydike.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
